# rust-vehicle-auction-simple

./: Cargo.toml  README.md  info
migrations/: 20250116074643_vehicle_auctions.sql
src/: main.rs
src/models/: mod.rs
src/routes/: handlers.rs
